# MuginCAD

./: Cargo.toml  README.md  build_log.txt  error.txt
crates/mugin_cad/: Cargo.toml
crates/mugin_cad/src/: main.rs
crates/mugin_cad/src/commands/: executor.rs  macros.rs  mod.rs
crates/mugin_cad/src/commands/create/: arc.rs  beam.rs  circle.rs  line.rs  measure.rs  mod.rs  place_column.rs  rectangle.rs  text.rs
crates/mugin_cad/src/commands/manipulate/: copy.rs  mod.rs  move.rs  offset.rs  rotate.rs  scale.rs  trim.rs
crates/mugin_cad/src/commands/measure/: area.rs  perimeter.rs
crates/mugin_cad/src/commands/utility/: distance.rs
crates/mugin_cad/src/export/: mod.rs  pdf.rs
crates/mugin_cad/src/model/: axis.rs  layer.rs  mod.rs
crates/mugin_cad/src/model/math/: geometry.rs  vector.rs
crates/mugin_cad/src/model/shapes/: annotation.rs  arc.rs  circle.rs  line.rs  mod.rs  rectangle.rs
crates/mugin_cad/src/model/structure/: beam.rs  beam_type.rs  column.rs  column_type.rs  definitions.rs  material.rs  mod.rs
crates/mugin_cad/src/model/system/: project.rs
crates/mugin_cad/src/model/tools/: mod.rs  snap.rs
crates/mugin_cad/src/view/: canvas.rs  mod.rs  shortcuts.rs
crates/mugin_cad/src/view/rendering/: context.rs  mod.rs  renderable.rs  renderer.rs  structure.rs
crates/mugin_cad/src/view/ui/: hierarchy.rs  inspector.rs  layer_panel.rs  mod.rs  settings.rs  tab_bar.rs  terminal.rs  toolbar.rs  topmenu.rs
crates/mugin_cad/src/viewmodel/: commands.rs  history.rs  input.rs  mod.rs  project.rs  selection.rs  snap.rs  tab.rs
src/: main.rs
(+113 files in other folders)
