[package]
name = "MuginCAD"
version = "0.1.0"
edition = "2024"

[dependencies]
mugin_widgets = { path = "../mugin_widgets" }
eframe = { version = "0.29.1", features = ["default", "persistence"] }
glam = { version = "0.29.0", features = ["serde"] }
rfd = "0.17.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.149"
printpdf = "0.5"
